tests/valid_programs/basics/never_type.duck
fn main() {
    const z: String = return;
}
