tests/errors/typechecker/require_duck_give_int.duck
fn my_duck_fun(d: { some: String }) {
}

fn main() {
    my_duck_fun(1);
}
